# reg2dfa

./: Cargo.toml  README.md
.cargo/: config
docs/: index.html
docs/css/: main.css
docs/js/: reg2dfa.wasm
src/: automata.dot  dfa.dot  dfa.rs  graph.dot  main.rs  make_dot  nfa.dot  nfa.rs
static/: index.html
static/css/: main.css
static/html/: index.html
static/js/: reg2dfa.wasm  regex.wasm
